--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   provider: ^6.1.2
   google_fonts: ^6.2.1
   flutter_dotenv: ^5.2.1
+  shared_preferences: ^2.3.3
 
 dev_dependencies:
   flutter_test:
